--- a/Front/css/style.css
+++ b/Front/css/style.css
@@ -74,3 +74,10 @@ align-items: center;
     flex-direction: column;
     align-items: center;
 }
+.img-taille-panier{
+    height: 9rem;
+    object-fit: cover;
+}
+.formulairePlacement{
+    display: flex;
+}
