--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+.section{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
 .imgTaille{
     width: 50%;
 }
@@ -45,7 +50,7 @@
     font-size: x-large;
 }
 .card{
-    width: 21.5rem;
+    width: 19rem;
     margin: 20px;
     border-radius: 10px;
     box-shadow: 0px 0px 15px 1px;
